--- a/index.html
+++ b/index.html
@@ -4,20 +4,35 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Thrive Orchids</title>
-  <link href="https://fonts.googleapis.com/css?family=Heebo:100,400,700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Heebo:100, 300,400,700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
   <header id="header"> 
-    <h1>Thrive Orchids</h1>
     <nav id="nav-bar">
       <ul>
+        <li><h1>Thrive Orchids</h1></li>
         <li>Features</li>
         <li>Price</li>
         <li>Contact Us</li>
       </ul>
     </nav>
+    <img id="header-img" src="./Assests/Media/jessica-knowlden-589517-unsplash.jpg" alt="White moth orchid">
+    <div id="features">
+      <h2 class="first">Locally cultivated</h2>
+      <h2 class="second">Easy to take care of</h2>
+      <h2 class="third">Can bloom for months</h2>
+      <h2 class="fourth">Ideal for first time growers</h2>
+      <h2 class="fifth">Can live for decades</h2>
+    </div>
   </header>
+  <main>
+    <div id="video">
+      <iframe width="624" height="348" src="https://www.youtube.com/embed/Yvopq9W8zZI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </div>
+    <p>We sell the most common type of orchid which is the Moth Orchid (phalaenopsis), they are much easier to take care of than other orchids and typically bloom for two to four months. The flowering time will depend on the condition of the plant and how well it is cared for. Orchids can rebloom 1-2 times per year and can live for many years, with some records of orchids living for over 100 years.</p>
+  </main>
   
 </body>
 </html>
