--- a/index.html
+++ b/index.html
@@ -1,38 +1,135 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Thrive Orchids</title>
-  <link href="https://fonts.googleapis.com/css?family=Heebo:100, 300,400,700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="style.css">
-</head>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Thrive Orchids</title>
+    <link
+      href="https://fonts.googleapis.com/css?family=Heebo:100, 300,400,700&display=swap"
+      rel="stylesheet"
+    />
+    <script
+      src="https://kit.fontawesome.com/13e56cf157.js"
+      crossorigin="anonymous"
+    ></script>
+    <link rel="stylesheet" href="style.css" />
+  </head>
 
-<body>
-  <header id="header"> 
-    <nav id="nav-bar">
-      <ul>
-        <li><h1>Thrive Orchids</h1></li>
-        <li>Features</li>
-        <li>Price</li>
-        <li>Contact Us</li>
-      </ul>
-    </nav>
-    <img id="header-img" src="./Assests/Media/jessica-knowlden-589517-unsplash.jpg" alt="White moth orchid">
-    <div id="features">
-      <h2 class="first">Locally cultivated</h2>
-      <h2 class="second">Easy to take care of</h2>
-      <h2 class="third">Can bloom for months</h2>
-      <h2 class="fourth">Ideal for first time growers</h2>
-      <h2 class="fifth">Can live for decades</h2>
-    </div>
-  </header>
-  <main>
-    <div id="video">
-      <iframe width="624" height="348" src="https://www.youtube.com/embed/Yvopq9W8zZI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-    </div>
-    <p>We sell the most common type of orchid which is the Moth Orchid (phalaenopsis), they are much easier to take care of than other orchids and typically bloom for two to four months. The flowering time will depend on the condition of the plant and how well it is cared for. Orchids can rebloom 1-2 times per year and can live for many years, with some records of orchids living for over 100 years.</p>
-  </main>
-  
-</body>
+  <body>
+    <header id="header">
+      <nav id="nav-bar">
+        <ul>
+          <li><h1>Thrive Orchids</h1></li>
+          <li>Features</li>
+          <li>Price</li>
+          <li>Contact Us</li>
+        </ul>
+      </nav>
+      <img
+        id="header-img"
+        src="./Assests/Media/jessica-knowlden-589517-unsplash.jpg"
+        alt="White moth orchid"
+      />
+      <div id="features">
+        <h2 class="first">Locally cultivated</h2>
+        <h2 class="second">Easy to take care of</h2>
+        <h2 class="third">Can bloom for months</h2>
+        <h2 class="fourth">Ideal for first time growers</h2>
+        <h2 class="fifth">Can live for decades</h2>
+      </div>
+    </header>
+    <main>
+      <div id="video">
+        <iframe
+          width="624"
+          height="348"
+          src="https://www.youtube.com/embed/Yvopq9W8zZI"
+          frameborder="0"
+          allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+          allowfullscreen
+        ></iframe>
+      </div>
+      <p>
+        We sell the most common type of orchid which is the Moth Orchid
+        (phalaenopsis), they are much easier to take care of than other orchids
+        and typically bloom for two to four months. The flowering time will
+        depend on the condition of the plant and how well it is cared for.
+        Orchids can rebloom 1-2 times per year and can live for many years, with
+        some records of orchids living for over 100 years.
+      </p>
+      <div class="cards">
+        <div class="white-large card">
+          <img
+            src="./Assests/Media/whitePottedPhalanopsis.png"
+            alt="large white moth orchid"
+            class="card-img"
+          />
+          <div class="card-details">
+            Large White Moth Orchid<br />
+            2 stems<br />
+            5 open flowers minimum
+          </div>
+        </div>
+        <div class="large-violet card">
+          <img
+            src="./Assests/Media/largeViolet.png"
+            alt="large violet moth orchid"
+            class="card-img"
+          />
+          <div class="card-details">
+            Large Violet Moth Orchid<br />
+            2 stems<br />
+            5 open flowers minimum
+          </div>
+        </div>
+        <div class="mini-white card">
+          <img
+            src="./Assests/Media/MiniWhite.png"
+            alt="miniature white moth orchid"
+            class="card-img"
+          />
+          <div class="card-details">
+            Miniature White Moth Orchid<br />
+            2 stems<br />
+            5 open flowers minimum
+          </div>
+        </div>
+        <div class="mini-violet card">
+          <img
+            src="./Assests/Media/MiniVioletPhalanopsis.png"
+            alt="miniature violet moth orchid"
+            class="card-img"
+          />
+          <div class="card-details">
+            Miniature Violet Moth Orchid<br />
+            2 stems<br />
+            5 open flowers minimum
+          </div>
+        </div>
+        <button>Add to cart</button>
+        <button>Add to cart</button>
+        <button>Add to cart</button>
+        <button>Add to cart</button>
+      </div>
+    </main>
+    <footer>
+      <div class="img-container">
+        <img
+          src="./Assests/Media/bloom-blossom-flora-65699.jpg"
+          alt="white orchid close up on black back ground"
+          class="footer-img"
+        />
+        <div class="contact-us">
+          <span class="title">Contact us</span><br />
+          <p>
+            <i class="fas fa-clock"></i> Mon - Fri 09:00 - 16:00
+            <i class="fas fa-phone-alt"></i> 082 962 9052
+            <i class="fas fa-map-marker-alt"></i>
+            <span class="pick-up-location">Pick Up Location: </span> 41 Besselsen Street,
+            Universitas, Bloemfontein
+          </p>
+        </div>
+      </div>
+    </footer>
+  </body>
 </html>
