--- a/index.html
+++ b/index.html
@@ -19,15 +19,19 @@
   <body>
     <header id="header">
       <nav id="nav-bar">
-        <ul class="responsive">
-          <li>
-            <h1><a href="#header">Thrive Orchids </a></h1>
-          </li>
-          <li> <a href="#features">Features</a> </li>
-          <li> <a href="#cards">Price</a> </li>
-          <li><a href="#contact-us">Contact Us</a></li>
-        </ul>
-        
+        <div class="menu-wrap">
+          <input type="checkbox" class="toggler">
+          <div class="hamburger"><div></div></div>
+          <ul>
+            <li>
+              <h1><a href="#header">Thrive Orchids </a></h1>
+            </li>
+            <li> <a href="#features">Features</a> </li>
+            <li> <a href="#cards">Price</a> </li>
+            <li><a href="#contact-us">Contact Us</a></li>
+          </ul>
+        </div>
+          
       </nav>
       <img
         id="header-img"
