responsive up to 600px

--- a/index.html
+++ b/index.html
@@ -13,25 +13,24 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="menu.css">
+    <link rel="stylesheet" href="menu.css" />
   </head>
 
   <body>
     <header id="header">
       <nav id="nav-bar">
         <div class="menu-wrap">
-          <input type="checkbox" class="toggler">
+          <input type="checkbox" class="toggler" />
           <div class="hamburger"><div></div></div>
           <ul>
             <li>
               <h1><a href="#header">Thrive Orchids </a></h1>
             </li>
-            <li> <a href="#features">Features</a> </li>
-            <li> <a href="#cards">Price</a> </li>
+            <li><a href="#features">Features</a></li>
+            <li><a href="#cards">Price</a></li>
             <li><a href="#contact-us">Contact Us</a></li>
           </ul>
         </div>
-          
       </nav>
       <img
         id="header-img"
@@ -67,57 +66,65 @@
       </p>
       <div id="cards">
         <div class="white-large card">
-          <img
-            src="./Assests/Media/whitePottedPhalanopsis.png"
-            alt="large white moth orchid"
-            class="card-img"
-          />
-          <div class="card-details">
-            Large White Moth Orchid<br />
-            2 stems<br />
-            5 open flowers minimum
+          <div class="top-container">
+            <img
+              src="./Assests/Media/whitePottedPhalanopsis.png"
+              alt="large white moth orchid"
+              class="card-img"
+            />
+            <div class="card-details">
+              Large White Moth Orchid<br />
+              2 stems<br />
+              5 open flowers minimum
+            </div>
           </div>
+          <button id="btn-large-white">Add to cart</button>
         </div>
         <div class="large-violet card">
-          <img
-            src="./Assests/Media/largeViolet.png"
-            alt="large violet moth orchid"
-            class="card-img"
-          />
-          <div class="card-details">
-            Large Violet Moth Orchid<br />
-            2 stems<br />
-            5 open flowers minimum
+          <div class="top-container">
+            <img
+              src="./Assests/Media/largeViolet.png"
+              alt="large violet moth orchid"
+              class="card-img"
+            />
+            <div class="card-details">
+              Large Violet Moth Orchid<br />
+              2 stems<br />
+              5 open flowers minimum
+            </div>
           </div>
+          <button id="btn-large-violet">Add to cart</button>
         </div>
         <div class="mini-white card">
-          <img
-            src="./Assests/Media/MiniWhite.png"
-            alt="miniature white moth orchid"
-            class="card-img"
-          />
-          <div class="card-details">
-            Miniature White Moth Orchid<br />
-            2 stems<br />
-            5 open flowers minimum
+          <div class="top-container">
+            <img
+              src="./Assests/Media/MiniWhite.png"
+              alt="miniature white moth orchid"
+              class="card-img"
+            />
+            <div class="card-details">
+              Miniature White Moth Orchid<br />
+              2 stems<br />
+              5 open flowers minimum
+            </div>
           </div>
+          <button id="btn-mini-white">Add to cart</button>
         </div>
         <div class="mini-violet card">
-          <img
-            src="./Assests/Media/MiniVioletPhalanopsis.png"
-            alt="miniature violet moth orchid"
-            class="card-img"
-          />
-          <div class="card-details">
-            Miniature Violet Moth Orchid<br />
-            2 stems<br />
-            5 open flowers minimum
+          <div class="top-container">
+            <img
+              src="./Assests/Media/MiniVioletPhalanopsis.png"
+              alt="miniature violet moth orchid"
+              class="card-img"
+            />
+            <div class="card-details">
+              Miniature Violet Moth Orchid<br />
+              2 stems<br />
+              5 open flowers minimum
+            </div>
           </div>
+          <button id="btn-mini-violet">Add to cart</button>
         </div>
-        <button id="btn-large-white">Add to cart</button>
-        <button id="btn-large-violet">Add to cart</button>
-        <button id="btn-mini-white">Add to cart</button>
-        <button id="btn-mini-violet">Add to cart</button>
       </div>
     </main>
     <footer>
